add "start": "react-scripts --openssl-legacy-provider start"

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "react-scripts --openssl-legacy-provider start",
     "dev": "react-scripts start",
-    "start": "serve build -s -n -L -p $PORT",
     "build": "react-scripts build"
   },
   "eslintConfig": {
