--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "react-multi-carousel": "^2.8.4",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.13.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
     "dev": "react-scripts start",
+    "start": "serve build -s -n -L -p $PORT",
     "build": "react-scripts build"
   },
   "eslintConfig": {
