--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
-  "name": "expert-circle",
+  "name": "create-react-app-starter",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
-    "install": "^0.13.0",
-    "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-landing-ui": "^1.3.3",
-    "react-modal": "^3.16.1",
-    "react-multi-carousel": "^2.8.4",
-    "react-player": "^2.12.0",
-    "react-router-dom": "^6.13.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "serve": "^14.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.3.1"
   },
   "scripts": {
     "dev": "react-scripts start",
