--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "create-react-app-starter",
   "version": "0.1.0",
   "dependencies": {
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.4",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.0",
