--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -11,6 +12,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.0",
     "serve": "^14.2.0",
     "web-vitals": "^3.3.1"
   },
