--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "create-react-app-starter",
   "version": "0.1.0",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
