--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.0",
     "serve": "^14.2.0",
     "web-vitals": "^3.3.1"
